<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_login_txt">点击使用账号密码登录(老用户)</string>
    <string name="ad_look_detail_txt">查看详情</string>
    <string name="ad_skip_txt">跳过</string>
    <string name="add_book_comple_password_tips_txt">检测到您当前账号还未完善密码，为了避免您书架丢失，建议您前往完善密码</string>
    <string name="add_bookshlef_txt">已加入书架</string>
    <string name="app_ad_to_read_txt">继续阅读 %1$s</string>
    <string name="app_chapter_ad_tips_txt">休息一会儿，点击广告支持应用</string>
    <string name="app_chapter_tips_txt">滑动空白区域可继续阅读</string>
    <string name="app_download_new_version_txt">正在为您下载，请稍候......</string>
    <string name="app_download_switch_background_txt">切换置后台</string>
    <string name="app_find_new_app_txt">发现新版本</string>
    <string name="app_model_day_txt">日间模式</string>
    <string name="app_model_night_txt">夜间模式</string>
    <string name="app_name">无痕读书</string>
    <string name="app_network_change_txt">亲,您的网络连接断了，联网使用更顺畅!</string>
    <string name="app_new_txt">新版本</string>
    <string name="app_new_version_txt">当前已是最新版本</string>
    <string name="app_please_login_txt">请您先登录</string>
    <string name="app_speediness_install_txt">安装包已下载，点击下方按钮直接安装</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authentication_code_register">填写邀请码，注册用户有好礼！直接前往注册！</string>
    <string name="authentication_share_tips">您的好友正在使用{appname}看海量免费小说，邀你一起来体验，下载链接：</string>
    <string name="author_placeholder_txt">作者:%1$s</string>
    <string name="auto_visitors_login_title">游客登录</string>
    <string name="barrage_hint_tips">报告，我有弹幕要发</string>
    <string name="barrage_popwindow_alpha_txt">不透明度</string>
    <string name="barrage_popwindow_font_txt">字号</string>
    <string name="barrage_popwindow_set_title">弹幕设置</string>
    <string name="barrage_popwindow_speed_txt">速度</string>
    <string name="barrage_popwindow_switch_txt">弹幕开关</string>
    <string name="barrage_send">发送</string>
    <string name="barrage_send_failed">弹幕发送失败</string>
    <string name="barrage_send_hint_txt">发一条撼动灵魂的弹幕吧!</string>
    <string name="barrage_send_success">弹幕发送成功</string>
    <string name="batch_cache_cache_progress_txt">已缓存至：%1$s，将从该章开始</string>
    <string name="batch_cache_no_read_txt">暂未阅读</string>
    <string name="batch_cache_read_progress_txt">已阅读至：%1$s，将从该章开始</string>
    <string name="batch_cache_reward_ad_tip_txt">观看小视频即可开始免费下载，中途退出则视为放弃哦～</string>
    <string name="batch_cache_reward_xz_btn_txt">观看</string>
    <string name="batch_download_success_txt">分段缓存完成</string>
    <string name="book_add_mark_success_txt">添加书签成功</string>
    <string name="book_add_mark_txt">添加书签</string>
    <string name="book_auto_read_exit_txt">退出自动阅读</string>
    <string name="book_auto_read_failed_stop_txt">页面加载失败自动阅读停止</string>
    <string name="book_auto_read_is_exit_txt">已退出自动阅读</string>
    <string name="book_auto_read_speed_fast_txt">加速 +</string>
    <string name="book_auto_read_speed_mode_around_txt">左右模式</string>
    <string name="book_auto_read_speed_mode_cover_txt">覆盖模式</string>
    <string name="book_auto_read_speed_mode_down_txt">上下模式</string>
    <string name="book_auto_read_speed_mode_txt">模式</string>
    <string name="book_auto_read_speed_slow_txt">减速 -</string>
    <string name="book_auto_read_speed_txt">速度</string>
    <string name="book_auto_read_speed_value_txt">速度：%1$s</string>
    <string name="book_auto_read_stop_last_page_txt">尾页停止自动阅读</string>
    <string name="book_auto_read_txt">滚屏</string>
    <string name="book_back_report_txt">举报</string>
    <string name="book_catalogue_txt">目录</string>
    <string name="book_change_source_desc_txt">章节内容不正确？可以试试换源～</string>
    <string name="book_change_source_title_txt">%1$s       %2$s</string>
    <string name="book_change_source_txt">换源</string>
    <string name="book_chapter_faild_back_in_txt">本章节正在处理中，不需要举报！</string>
    <string name="book_chapter_faild_back_txt">章节错误反馈：《%1$s》的\"%2$s(cid:%3$s)\"</string>
    <string name="book_city_see_txt">逛逛书城</string>
    <string name="book_click_change_source_txt">点击换源</string>
    <string name="book_click_share_txt">点击分享</string>
    <string name="book_collect_txt">收藏</string>
    <string name="book_comment_star_txt">赞</string>
    <string name="book_comment_txt">评论</string>
    <string name="book_defult_source_txt">默认源</string>
    <string name="book_detail_author_book_txt">%1$s  还写过</string>
    <string name="book_detail_author_txt">作者：</string>
    <string name="book_detail_category_newchapter_txt">目录</string>
    <string name="book_detail_category_txt">类型：%1$s</string>
    <string name="book_detail_chapter_count_txt">全部章节 (%1$d)</string>
    <string name="book_detail_commendation_txt">同类推荐</string>
    <string name="book_detail_dialog_grade_failed_txt">评分失败!</string>
    <string name="book_detail_dialog_score_txt">您的评分:%1$s分</string>
    <string name="book_detail_exchange_txt">换一批</string>
    <string name="book_detail_native_ad_title_txt">大家都在玩</string>
    <string name="book_detail_new_chapter_time_txt">最近更新：%1$s</string>
    <string name="book_detail_request_failed_txt">获取书籍失败</string>
    <string name="book_detail_request_load_txt">请等待书籍加载完成</string>
    <string name="book_detail_score_txt">分</string>
    <string name="book_detail_source_default_txt">来源：https://www.baidu.com</string>
    <string name="book_detail_source_txt">来源：</string>
    <string name="book_detail_txt">书籍详情</string>
    <string name="book_detail_type_txt">状态：%1$s</string>
    <string name="book_detail_update_txt">更新：%1$s</string>
    <string name="book_detail_upload_author_txt">上传者：%1$s</string>
    <string name="book_detail_upload_major_txt">角色：%1$s</string>
    <string name="book_detail_works_intro_txt">简介：</string>
    <string name="book_element_collect_txt">最多收藏</string>
    <string name="book_element_hot_txt">本周最热</string>
    <string name="book_element_new_txt">最新发布</string>
    <string name="book_element_recommend_txt">小编推荐</string>
    <string name="book_finish_txt">完结</string>
    <string name="book_follow_system_txt">跟随系统</string>
    <string name="book_font_complex_txt">繁体</string>
    <string name="book_grade_txt">评分</string>
    <string name="book_hot_update_txt">热更</string>
    <string name="book_listen_txt">听书</string>
    <string name="book_mark_txt">书签</string>
    <string name="book_menu_more_set_txt">更多设置&gt;&gt;</string>
    <string name="book_my_bookshelf_txt">返回书架</string>
    <string name="book_next_chapter_txt">下一章</string>
    <string name="book_previou_chapter_txt">上一章</string>
    <string name="book_read_finish_title_txt">恭喜您读完最新章节</string>
    <string name="book_read_font_example_txt">枫桥夜泊#月落乌啼霜满天、江枫渔火对愁眠#姑苏城外寒山寺、夜半钟声到客船</string>
    <string name="book_read_now">立即阅读</string>
    <string name="book_read_page_txt">%1$s/%2$s页</string>
    <string name="book_read_recomment_sd_title_txt">热门书单</string>
    <string name="book_read_recomment_title_txt">大家都在看</string>
    <string name="book_read_screen_close_mode_keep_txt">常亮</string>
    <string name="book_read_screen_close_mode_one_txt">15分钟</string>
    <string name="book_read_screen_close_mode_system_txt">系统</string>
    <string name="book_read_screen_close_mode_three_txt">60分钟</string>
    <string name="book_read_screen_close_mode_two_txt">30分钟</string>
    <string name="bottom_share_dilog_tips">扫描二维码，立即安装</string>
    <string name="dr">没有更多数据</string>
    <string name="ds">加载失败，请点我重试</string>
    <string name="dt">正在加载中...</string>
    <string name="comic_txt">漫画</string>
    <string name="create_booklist_tips_txt">(温馨提示：亲，您发布的书单将会经过我们严格的审核，杜绝垃圾书单，请您合理编辑)</string>
    <string name="create_element_add_for_shelf_txt">书架添加</string>
    <string name="create_element_add_for_store_txt">书库添加</string>
    <string name="create_element_intro_txt">填写书单介绍（最少10个字不超过200字）</string>
    <string name="create_element_men_frequent_txt">男频</string>
    <string name="create_element_title_txt">填写书单名称</string>
    <string name="create_element_women_frequent_txt">女频</string>
    <string name="download_txt">下载</string>
    <string name="ebook_txt">小说</string>
    <string name="main_agree">同意</string>
    <string name="main_book_shelf_title_txt">我的书架</string>
    <string name="main_cancel">取消</string>
    <string name="main_problem_feedback_txt">问题反馈</string>
    <string name="main_refused">拒绝</string>
    <string name="main_tab_book_city">书城</string>
    <string name="main_tab_book_city_category_txt">分类</string>
    <string name="main_tab_book_discover">发现</string>
    <string name="main_tab_book_info">我的</string>
    <string name="main_tab_book_shelf">书架</string>
    <string name="mgtg_msg">为了您更好的体验漫画阅读，我们为您提供了单独的精品漫画应用包，强烈推荐您下载体验。</string>
    <string name="mh_unlock_chapter_need_login_txt">最新章节您需要登录才能继续阅读！</string>
    <string name="mh_unlock_chapter_to_login">立即登录</string>
    <string name="new_share_entrance_title">免广告特权</string>
    <string name="new_share_link_users">已推广 %1$d 人</string>
    <string name="new_share_no_free_ad">暂未享受广告特权</string>
    <string name="permissions_use_tips">应商店要求，需你同意才能使用我们的服务！</string>
    <string name="picture_txt">美女</string>
    <string name="share_entrance_free_ad_btn_txt">看视频免广告</string>
    <string name="share_entrance_share_btn_txt">分享推广</string>
    <string name="share_entrance_tips_txt">分享可得终身免广告特权&gt;</string>
    <string name="share_txt_copy_link">复制链接</string>
    <string name="share_txt_save_img">保存相册</string>
    <string name="share_txt_weixin">分享微信</string>
    <string name="share_txt_weixin_pyq">分享朋友圈</string>
    <string name="tips_reload_txt">点击重试</string>
    <string name="tips_tip_title_txt">提示</string>
    <string name="user_content_parse_failure">当前章节内容获取失败，设备或者账号状态异常，如有疑问请向我们反馈！</string>
    <string name="welcome_user_service_subtitle">终于等到你</string>
    <string name="welcome_user_service_title">欢迎来到%1$s</string>
    <string name="wifi_import_book_connection_wifi_name_txt">已连接WiFi名称为：%1$s\n手机和电脑务必在同一WiFi内</string>
    <string name="wifi_import_book_not_close_activity_txt">传书过程中请勿关闭此页面</string>
    <string name="wifi_import_book_open_wifi_txt">WiFi已开启</string>
    <string name="wifi_import_book_please_input_txt">在电脑浏览器地址栏输入</string>
</resources>