<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/shape_dialog_tips_bg" android:padding="18dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="14.3sp" android:textColor="@color/color_666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_user_service_subtitle"/>
    <TextView android:textSize="20sp" android:textColor="@color/color_333333" android:id="@+id/welcome_user_title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/welcome_user_service_title"/>
    <TextView android:textSize="14sp" android:textColor="@color/color_666666" android:id="@+id/welcome_user_desc_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/welcome_user_service_title"/>
    <TextView android:textSize="14sp" android:textColor="@color/color_ffffff" android:gravity="center" android:id="@+id/welcome_user_agreen_btn" android:background="@drawable/selector_red_semicircle_bg" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginTop="20dp" android:text="@string/main_agree" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
    <TextView android:textSize="14sp" android:textColor="@color/color_333333" android:gravity="center" android:id="@+id/welcome_user_refused_btn" android:paddingTop="15dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/main_refused"/>
    <TextView android:textSize="12sp" android:textColor="@color/color_F56C6C" android:layout_gravity="center_horizontal" android:id="@+id/welcome_user_refused_tips_tv" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/permissions_use_tips"/>
</LinearLayout>
