<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/shape_dialog_tm_tips_bg" android:paddingLeft="5dp" android:paddingRight="5dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <FrameLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/dl" android:textStyle="bold" android:textColor="@color/color_333333" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_share_entrance_title"/>
        <TextView android:textSize="13sp" android:textColor="@color/color_666666" android:layout_gravity="center" android:id="@+id/new_share_end_time" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_share_no_free_ad"/>
    </FrameLayout>
    <RelativeLayout android:background="@drawable/shape_red_angle_content_bg" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/dl" android:textColor="@color/color_ffffff" android:id="@+id/new_share_info_tg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_share_link_users" android:layout_centerVertical="true"/>
        <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="#ffff6347" android:layout_gravity="center_horizontal" android:id="@+id/new_share_share_btn" android:background="@drawable/shape_popup_white_bg" android:paddingTop="6dp" android:paddingBottom="6dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_entrance_share_btn_txt" android:layout_alignParentRight="true" android:paddingStart="15dp" android:paddingEnd="15dp"/>
        <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="#ff0693ea" android:layout_gravity="center_horizontal" android:id="@+id/new_share_free_video_btn" android:background="@drawable/shape_popup_white_bg" android:paddingTop="6dp" android:paddingBottom="6dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_entrance_free_ad_btn_txt" android:layout_toLeftOf="@+id/new_share_share_btn" android:paddingStart="15dp" android:paddingEnd="15dp" android:layout_marginEnd="15dp"/>
        <TextView android:textSize="12sp" android:textColor="@color/color_ffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/share_entrance_tips_txt" android:layout_below="@+id/new_share_share_btn" android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>
