<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:fancy="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <EditText android:textSize="13sp" android:textColor="@color/color_333333" android:textColorHint="@color/color_999999" android:id="@+id/create_element_title_et" android:background="@null" android:paddingLeft="10dp" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/create_element_title_txt" android:singleLine="true"/>
    <EditText android:textSize="13sp" android:textColor="@color/color_333333" android:textColorHint="@color/color_999999" android:gravity="top|left" android:id="@+id/create_element_intro_et" android:background="@null" android:paddingLeft="10dp" android:paddingTop="5dp" android:paddingRight="10dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:hint="@string/create_element_intro_txt" android:maxLines="5" android:minLines="5"/>
    <RelativeLayout android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.biquge.ebook.app.widget.fancybuttons.FancyButton android:gravity="center" android:id="@+id/create_element_add_shelf_txt" android:paddingLeft="15dp" android:paddingTop="7dp" android:paddingRight="15dp" android:paddingBottom="7dp" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" fancy:cg="@color/colorPrimary" fancy:ch="0.5dp" fancy:ci="#00000000" fancy:cy="15dp" fancy:d3="@string/create_element_add_for_shelf_txt" fancy:d5="@color/color_666666" fancy:d9="12sp"/>
        <com.biquge.ebook.app.widget.fancybuttons.FancyButton android:gravity="center" android:id="@+id/create_element_add_store_txt" android:paddingLeft="15dp" android:paddingTop="7dp" android:paddingRight="15dp" android:paddingBottom="7dp" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_toRightOf="@+id/create_element_add_shelf_txt" android:layout_centerVertical="true" fancy:cg="@color/colorPrimary" fancy:ch="0.5dp" fancy:ci="#00000000" fancy:cy="15dp" fancy:d3="@string/create_element_add_for_store_txt" fancy:d5="@color/color_666666" fancy:d9="12sp"/>
        <com.biquge.ebook.app.widget.AppRadioButton android:textSize="12sp" android:textColor="@color/color_666666" android:gravity="center" android:id="@+id/create_element_forwomen_ck" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="@string/create_element_women_frequent_txt" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
        <com.biquge.ebook.app.widget.AppRadioButton android:textSize="12sp" android:textColor="@color/color_666666" android:gravity="center" android:id="@+id/create_element_formen_ck" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="@string/create_element_men_frequent_txt" android:layout_toLeftOf="@+id/create_element_forwomen_ck" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <TextView android:textSize="13sp" android:textColor="@color/color_666666" android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/create_booklist_tips_txt"/>
</LinearLayout>
