<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/shape_dialog_tips_bg" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="20sp" android:textColor="@color/color_333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/tips_tip_title_txt"/>
    <TextView android:textSize="15sp" android:textColor="@color/color_666666" android:id="@+id/mhtg_msg_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:layout_marginTop="10dp" android:text="@string/mgtg_msg"/>
    <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp">
        <TextView android:textSize="16sp" android:textColor="@color/txt_normal_color" android:id="@+id/a8t" android:background="?android:attr/selectableItemBackground" android:paddingLeft="18dp" android:paddingTop="10dp" android:paddingRight="18dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20dp" android:text="@string/main_cancel"/>
        <TextView android:textSize="16sp" android:textColor="@color/main_tab_txt_color" android:id="@+id/a8v" android:background="?android:attr/selectableItemBackground" android:paddingLeft="18dp" android:paddingTop="10dp" android:paddingRight="18dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/download_txt"/>
    </LinearLayout>
</LinearLayout>
