<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="vertical" android:background="@color/main_bg_color" android:layout_width="match_parent" android:layout_height="wrap_content">
    <FrameLayout android:layout_width="150dp" android:layout_height="150dp" android:layout_marginTop="10dp">
        <ImageView android:id="@+id/share_fragment_bottom_qrcode" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <com.biquge.ebook.app.widget.AppProgressBar android:layout_gravity="center" android:id="@+id/share_fragment_qrcode_loadingview" android:visibility="gone" android:layout_width="30dp" android:layout_height="30dp"/>
    </FrameLayout>
    <TextView android:textSize="13sp" android:id="@+id/share_fragment_bottom_qrcode_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginBottom="10dp" android:text="@string/bottom_share_dilog_tips"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/share_fragment_bottom" android:layout_width="match_parent" android:layout_height="75dp">
        <com.biquge.ebook.app.widget.DrawableTextView android:textSize="14sp" android:textColor="@color/color_333333" android:gravity="center" android:id="@+id/share_bottom_layout_openwx" android:background="@drawable/simple_bg_selector" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/share_txt_weixin" android:drawablePadding="3dp" android:layout_weight="1" app:kt="@drawable/share_weixin" app:ku="30dp" app:kv="30dp"/>
        <com.biquge.ebook.app.widget.DrawableTextView android:textSize="14sp" android:textColor="@color/color_333333" android:gravity="center" android:id="@+id/share_bottom_layout_openwx_pyq" android:background="@drawable/simple_bg_selector" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/share_txt_weixin_pyq" android:drawablePadding="3dp" android:layout_weight="1" app:kt="@drawable/share_pyq" app:ku="30dp" app:kv="30dp"/>
        <com.biquge.ebook.app.widget.DrawableTextView android:textSize="14sp" android:textColor="@color/color_333333" android:gravity="center" android:id="@+id/share_bottom_layout_copylink" android:background="@drawable/simple_bg_selector" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/share_txt_copy_link" android:drawablePadding="3dp" android:layout_weight="1" app:kt="@drawable/share_copy" app:ku="30dp" app:kv="30dp"/>
        <com.biquge.ebook.app.widget.DrawableTextView android:textSize="14sp" android:textColor="@color/color_333333" android:gravity="center" android:id="@+id/share_bottom_layout_saveimg" android:background="@drawable/simple_bg_selector" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/share_txt_save_img" android:drawablePadding="3dp" android:layout_weight="1" app:kt="@drawable/share_save_img" app:ku="30dp" app:kv="30dp"/>
    </LinearLayout>
    <View style="@style/sc"/>
    <TextView android:textColor="@color/color_666666" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/pop_cancel" android:background="@drawable/simple_bg_selector" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/main_cancel" android:layout_alignParentRight="true"/>
</LinearLayout>
