<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/wifi_book_actionbar" layout="@layout/include_header_layout"/>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/colorPrimaryDark" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/bg_wifi"/>
        <TextView android:textSize="18sp" android:textColor="@color/color_ffffff" android:id="@+id/wifi_book_state_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/wifi_import_book_open_wifi_txt"/>
        <TextView android:textSize="13sp" android:textColor="@color/color_ffffff" android:gravity="center" android:id="@+id/wifi_book_name_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/wifi_import_book_connection_wifi_name_txt" android:lineSpacingExtra="3dp"/>
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/wifi_transmit_book_layout" android:background="@color/main_bg_color" android:padding="20dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="14sp" android:textColor="@color/color_666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_import_book_please_input_txt"/>
        <TextView android:textSize="16sp" android:textColor="@color/color_ffffff" android:id="@+id/wifi_book_connection_address_txt" android:background="@drawable/selector_defult_style_bt" android:paddingLeft="10dp" android:paddingTop="5dp" android:paddingRight="10dp" android:paddingBottom="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp"/>
        <TextView android:textSize="14sp" android:textColor="@color/color_FFA524" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/wifi_import_book_not_close_activity_txt"/>
    </LinearLayout>
</LinearLayout>
